--- a/assets/css/pokedex.css
+++ b/assets/css/pokedex.css
@@ -7,75 +7,75 @@
 }
 
 .normal {
-    background-color: #a6a877;
+    background-color: #a6a877c1;
 }
 
 .grass {
-    background-color: #77c850;
+    background-color: #76c850c1;
 }
 
 .fire {
-    background-color: #ee7f30;
+    background-color: #ee7f30c1;
 }
 
 .water {
-    background-color: #678fee;
+    background-color: #678feec1;
 }
 
 .electric {
-    background-color: #f7cf2e;
+    background-color: #f7cf2ec1;
 }
 
 .ice {
-    background-color: #98d5d7;
+    background-color: #98d5d7c1;
 }
 
 .ground {
-    background-color: #dfbf69;
+    background-color: #dfc169c1;
 }
 
 .flying {
-    background-color: #a98ff0;
+    background-color: #a98ff0c1;
 }
 
 .poison {
-    background-color: #a040a0;
+    background-color: #a040a0c1;
 }
 
 .fighting {
-    background-color: #bf3029;
+    background-color: #c13029c1;
 }
 
 .psychic {
-    background-color: #f65687;
+    background-color: #f65687c1;
 }
 
 .dark {
-    background-color: #725847;
+    background-color: #725847c1;
 }
 
 .rock {
-    background-color: #b8a137;
+    background-color: #b8a137c1;
 }
 
 .bug {
-    background-color: #a8b720;
+    background-color: #a8b720c1;
 }
 
 .ghost {
-    background-color: #6e5896;
+    background-color: #6e5896c1;
 }
 
 .steel {
-    background-color: #b9b7cf;
+    background-color: #b9b7cfc1;
 }
 
 .dragon {
-    background-color: #6f38f6;
+    background-color: #6f38f6c1;
 }
 
 .fairy {
-    background-color: #f9aec7;
+    background-color: #f9aec7c1;
 }
 
 .pokemon {
@@ -109,7 +109,7 @@
 .pokemon .detail .types {
     padding: 0;
     margin: 0;
-    list-style: none;
+    list-style: none; 
 }
 
 .pokemon .detail .types .type {
@@ -118,8 +118,9 @@
     margin: .25rem 0;
     font-size: .625rem;
     border-radius: 1rem;
-    filter: brightness(1.1);
+    filter: brightness(.95);
     text-align: center;
+    
 }
 
 .pokemon .detail img {
@@ -127,18 +128,96 @@
     height: 70px;
 }
 
-.pagination {
+.detailedPokemon {
+    display: flex;
+    flex-direction: column;
+    margin: .5rem;
+    padding: 1rem;
+    border-radius: 1rem;
+}
+
+.detailedPokemon .number {
+    position: absolute;
+    color: #000;
+    opacity: .3;
+    text-align: right;
+    font-size: 1rem;
+}
+
+.detailedPokemon .name {
+    text-transform: capitalize;
+    color: #fff;
+    margin-bottom: .25rem;
+    text-align: center;
+}
+
+.detailedPokemon .detail {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.detailedPokemon .detail .types {
+    padding: 0;
+    margin: 0;
+    list-style: none;
+    display: flex;
+    justify-content: center;
+}
+
+.detailedPokemon .detail .details {
+    background-color: rgba(255, 255, 255, 0.518);
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    border-radius: 1rem;
+    font-size: 1rem;
+    text-transform: capitalize;
+    text-align: center;
+    padding-left: 0;
+}
+
+.detailedPokemon .detail .details div {
+    color: #66666b;
+}
+
+.detailedPokemon .detail .details li {
+    color: #19191b;
+    list-style: none;
+}
+
+.detailedPokemon .detail .types .type {    
+    color: #fff;
+    padding: .25rem 3rem;
+    margin: .25rem 0;
+    font-size: .725rem;
+    border-radius: 1rem;
+    filter: brightness(1.1);
+    text-align: center;
+    filter: brightness(.95);
+}
+
+.detailedPokemon .detail img {
+    max-width: 100%;
+    height: 190px;
+}
+
+
+.simpleButton {
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
     width: 100%;
-    padding: 1rem;
-}
-
-.pagination button {
+    font-size: .625rem;
+    color: #fff;
+    border: none;
+    border-radius: 1rem;
     padding: .25rem .5rem;
     margin: .25rem 0;
+}
+
+.simpleButton button {
     font-size: .625rem;
     color: #fff;
     background-color: #6c79db;
